--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,9 @@
 body {
     background-image: url("double-bubble.png");
   }
+
+.wrapper{
+    max-width:1000px;
+    width: 100%;
+    background-color: white;
+}
